--- a/chal/index.html
+++ b/chal/index.html
@@ -17,23 +17,23 @@
       <!-- Logo Group -->
       <div class="logo-group">
         <!--merged image-->
-        <a href="/home1/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
-        <a href="/home1/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
+        <a href="/CodeQuest/home1/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
+        <a href="/CodeQuest/home1/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
       </div>
 
       <!-- Navigation -->
       <nav class="main-nav">
         <ul>
-          <li><a href="/learnpage/index.html">Learn</a></li>
-          <li><a href="/chal/index.html">Practice</a></li>
-          <li><a href="#build">Build</a></li>
-          <li><a href="#community">Community</a></li>
+          <li><a href="/CodeQuest/learnpage/index.html">Learn</a></li>
+          <li><a href="/CodeQuest/chal/index.html">Practice</a></li>
+          <li><a>Build</a></li>
+          <li><a>Community</a></li>
         </ul>
       </nav>
 
       <!-- Sign Up Button -->
       <div class="auth-action">
-        <a href="/login/index.html"><img src="images/0de3c998913bd25748d140c2949c7a0c9929a54d.png" alt="Sign Up" class="signup-btn-img"></a>
+        <a href="/CodeQuest/login/index.html"><img src="images/0de3c998913bd25748d140c2949c7a0c9929a54d.png" alt="Sign Up" class="signup-btn-img"></a>
       </div>
       </div>
     </header>
