--- a/htmllearn1/index.html
+++ b/htmllearn1/index.html
@@ -27,17 +27,17 @@
       <!-- Logo Group -->
       <div class="logo-group">
         <!--merged image-->
-        <a href="/home1/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
-        <a href="/home1/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
+        <a href="/CodeQuest/home1/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
+        <a href="/CodeQuest/home1/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
       </div>
 
       <!-- Navigation -->
       <nav class="main-nav">
         <ul>
-          <li><a href="/learnpage/index.html">Learn</a></li>
-          <li><a href="/chal/index.html">Practice</a></li>
-          <li><a href="#build">Build</a></li>
-          <li><a href="#community">Community</a></li>
+          <li><a href="/CodeQuest/learnpage/index.html">Learn</a></li>
+          <li><a href="/CodeQuest/chal/index.html">Practice</a></li>
+          <li><a>Build</a></li>
+          <li><a>Community</a></li>
         </ul>
       </nav>
 
@@ -50,14 +50,14 @@
 
     <!-- Hero Interaction -->
     <div class="hero-content">
-      <a href="#start-learning" class="cta-button hero-btn">
+      <a>
         <img src="images/6c89a392550a55968111158619e22b58d6ce62f0.png" alt="Start Learning">
       </a>
     </div>
 
     <!-- Lesson Interaction -->
     <div class="lesson-content">
-      <a href="#start-lesson" class="cta-button lesson-btn">
+      <a>
         <img src="images/01c1b72cc5668817e8e778823aa33344423bc7b9.png" alt="Start Lesson">
       </a>
     </div>
