--- a/learnpage/index.html
+++ b/learnpage/index.html
@@ -27,17 +27,17 @@
       <!-- Logo Group -->
       <div class="logo-group">
         <!--merged image-->
-        <a href="/home1/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
-        <a href="/home1/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
+        <a href="/CodeQuest/home1/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
+        <a href="/CodeQuest/home1/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
       </div>
 
       <!-- Navigation -->
       <nav class="main-nav">
         <ul>
-          <li><a href="/learnpage/index.html">Learn</a></li>
-          <li><a href="/chal/index.html">Practice</a></li>
-          <li><a href="#build">Build</a></li>
-          <li><a href="#community">Community</a></li>
+          <li><a href="/CodeQuest/learnpage/index.html">Learn</a></li>
+          <li><a href="/CodeQuest/chal/index.html">Practice</a></li>
+          <li><a>Build</a></li>
+          <li><a>Community</a></li>
         </ul>
       </nav>
 
@@ -51,13 +51,13 @@
  <div class="courses-content">
       <div class="cards-grid">
         <div class="course-card">
-          <a href="/htmllearn1/index.html"><img src="images/htmlsect.png" alt="HTML Course"></a>
+          <a href="/CodeQuest/htmllearn1/index.html"><img src="images/htmlsect.png" alt="HTML Course"></a>
         </div>
         <div class="course-card">
-          <a href="/csslearn1/index.html"><img src="images/csssect.png" alt="CSS Course"></a>
+          <a href="/CodeQuest/csslearn1/index.html"><img src="images/csssect.png" alt="CSS Course"></a>
         </div>
         <div class="course-card">
-          <a href="/jslearn1/index.html"><img src="images/jssect.png" alt="JavaScript Course"></a>
+          <a href="/CodeQuest/jslearn1/index.html"><img src="images/jssect.png" alt="JavaScript Course"></a>
         </div>
       </div>
    
