--- a/login/index.html
+++ b/login/index.html
@@ -232,7 +232,7 @@
     <!-- Login Button -->
     <div class="action-group">
       <button class="login-btn">
-        <img src="images/74c93a92b6e05803298c4224666ea266d6321724.png" alt="Log In">
+        <a href="/CodeQuest/logined/home/index.html"> <img src="images/74c93a92b6e05803298c4224666ea266d6321724.png" alt="Log In"></a>
       </button>
     </div>
 
