--- a/logined/challenge/index.html
+++ b/logined/challenge/index.html
@@ -18,23 +18,23 @@
       <!-- Logo Group -->
       <div class="logo-group">
         <!--merged image-->
-          <a href="/logined/home/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
-        <a href="/logined/home/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
+          <a href="/CodeQuest/logined/home/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
+        <a href="/CodeQuest/logined/home/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
       </div>
 
       <!-- Navigation -->
       <nav class="main-nav">
         <ul>
-          <li><a href="/logined/laern/index.html">Learn</a></li>
-          <li><a href="/logined/challenge/index.html">Practice</a></li>
-          <li><a href="#build">Build</a></li>
-          <li><a href="#community">Community</a></li>
+          <li><a href="/CodeQuest/logined/laern/index.html">Learn</a></li>
+          <li><a href="/CodeQuest/logined/challenge/index.html">Practice</a></li>
+          <li><a>Build</a></li>
+          <li><a>Community</a></li>
         </ul>
       </nav>
 
       <!-- Sign Up Button -->
       <div class="auth-action">
-        <a href="/logined/profile/index.html"><img src="images/pfp.png" alt="Sign Up" class="signup-btn-img"></a>
+        <a href="/CodeQuest/logined/profile/index.html"><img src="images/pfp.png" alt="Sign Up" class="signup-btn-img"></a>
       </div>
       </div>
     </header>
