--- a/logined/learnhtml/index.html
+++ b/logined/learnhtml/index.html
@@ -27,37 +27,37 @@
       <!-- Logo Group -->
       <div class="logo-group">
         <!--merged image-->
-       <a href="/logined/home/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
-        <a href="/logined/home/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
+       <a href="/CodeQuest/logined/home/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
+        <a href="/CodeQuest/logined/home/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
       </div>
 
       <!-- Navigation -->
       <nav class="main-nav">
         <ul>
-          <li><a href="/logined/laern/index.html">Learn</a></li>
-          <li><a href="/logined/challenge/index.html">Practice</a></li>
-          <li><a href="#build">Build</a></li>
-          <li><a href="#community">Community</a></li>
+          <li><a href="/CodeQuest/logined/laern/index.html">Learn</a></li>
+          <li><a href="/CodeQuest/logined/challenge/index.html">Practice</a></li>
+          <li><a>Build</a></li>
+          <li><a>Community</a></li>
         </ul>
       </nav>
 
       <!-- Sign Up Button -->
       <div class="auth-action">
-        <a href="/logined/profile/index.html"><img src="images/pfp.png" alt="Sign Up" class="signup-btn-img"></a>
+        <a href="/CodeQuest/logined/profile/index.html"><img src="images/pfp.png" alt="Sign Up" class="signup-btn-img"></a>
       </div>
       </div>
     </header>
 
     <!-- Hero Interaction -->
     <div class="hero-content">
-      <a href="#start-learning" class="cta-button hero-btn">
+      <a>
         <img src="images/6c89a392550a55968111158619e22b58d6ce62f0.png" alt="Start Learning">
       </a>
     </div>
 
     <!-- Lesson Interaction -->
     <div class="lesson-content">
-      <a href="#start-lesson" class="cta-button lesson-btn">
+      <a>
         <img src="images/01c1b72cc5668817e8e778823aa33344423bc7b9.png" alt="Start Lesson">
       </a>
     </div>
