--- a/logined/profile/index.html
+++ b/logined/profile/index.html
@@ -21,25 +21,25 @@
        <div class="logo-wrapper">
         <!-- merged image -->
         <div class="logo-group">
-          <a href="/logined/home/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
-        <a href="/logined/home/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
+          <a href="/CodeQuest/logined/home/index.html"><img src="images/4819c4c6cb768819824d2569bbe6e53e3e604543.png" alt="Code Quest Logo Icon" class="logo-icon"></a>
+        <a href="/CodeQuest/logined/home/index.html"><img src="images/7a785d8284b50fd7472dc9afcbd26d574385e905.png" alt="Code Quest" class="logo-text"></a>
         </div>
       </div>
 
       <!-- Navigation -->
       <nav class="main-nav">
         <ul>
-          <li><a href="/logined/laern/index.html">Learn</a></li>
-          <li><a href="/logined/challenge/index.html">Practice</a></li>
-          <li><a href="#build">Build</a></li>
-          <li><a href="#community">Community</a></li>
+          <li><a href="/CodeQuest/logined/laern/index.html">Learn</a></li>
+          <li><a href="/CodeQuest/logined/challenge/index.html">Practice</a></li>
+          <li><a>Build</a></li>
+          <li><a>Community</a></li>
         </ul>
       </nav>
 
       <!-- User Profile -->
       <div class="user-actions">
         <div class="profile-pic-wrapper">
-          <img src="/logined/profile/images/pfp.png" alt="User Profile" class="profile-pic">
+          <img src="/CodeQuest/logined/profile/images/pfp.png" alt="User Profile" class="profile-pic">
         </div>
       </div>
     </div>
