--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
       <!-- Navigation -->
       <nav class="main-nav">
         <ul>
-          <li><a href="/learnpage/index.html">Learn</a></li>
-          <li><a href="/chal/index.html">Practice</a></li>
-          <li><a href="#build">Build</a></li>
-          <li><a href="#community">Community</a></li>
+          <li><a href="/CodeQuest/learnpage/index.html">Learn</a></li>
+          <li><a href="/CodeQuest/chal/index.html">Practice</a></li>
+          <li><a>Build</a></li>
+          <li><a>Community</a></li>
         </ul>
       </nav>
 
       <!-- Sign Up Button -->
       <div class="header-cta">
         <a href="#signup">
-          <a href="/login/index.html"><img src="images/0de3c998913bd25748d140c2949c7a0c9929a54d.png" alt="Sign Up" class="signup-btn-img"></a>
+          <a href="/CodeQuest/login/index.html"><img src="images/0de3c998913bd25748d140c2949c7a0c9929a54d.png" alt="Sign Up" class="signup-btn-img"></a>
         </a>
       </div>
     </div>
@@ -70,18 +70,18 @@
     <div class="courses-content">
       <div class="cards-grid">
         <div class="course-card">
-          <a href="/htmllearn1/index.html"><img src="images/htmlsect.png" alt="HTML Course"></a>
+          <a href="/CodeQuest/htmllearn1/index.html"><img src="images/htmlsect.png" alt="HTML Course"></a>
         </div>
         <div class="course-card">
-          <a href="/csslearn1/index.html"><img src="images/csssect.png" alt="CSS Course"></a>
+          <a href="/CodeQuest/csslearn1/index.html"><img src="images/csssect.png" alt="CSS Course"></a>
         </div>
         <div class="course-card">
-          <a href="/jslearn1/index.html"><img src="images/jssect.png" alt="JavaScript Course"></a>
+          <a href="/CodeQuest/jslearn1/index.html"><img src="images/jssect.png" alt="JavaScript Course"></a>
         </div>
       </div>
       
       <div class="courses-cta">
-        <a href="/learnpage/index.html">
+        <a href="/CodeQuest/learnpage/index.html">
           <img src="images/explorebtn.png" alt="Explore All Courses">
         </a>
       </div>
